--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -19,11 +19,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.substance-5.0.jar=E:\\Mis Documentos\\NetBeansProjects\\substance-5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.substance-5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
