Substance Path Fix

--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -19,7 +19,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.substance-5.0.jar=E:\\Mis Documentos\\NetBeansProjects\\substance-5.0.jar
+file.reference.substance-5.0.jar=substance-5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
