--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -19,13 +19,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itext-5.1.2.zip=C:\\Users\\Darthian\\Downloads\\itext-5.1.2.zip
 file.reference.substance-5.0.jar=substance-5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.substance-5.0.jar}
+    ${file.reference.substance-5.0.jar}:\
+    ${file.reference.itext-5.1.2.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
