--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -19,7 +19,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.itext-5.1.2.zip=C:\\Users\\Darthian\\Downloads\\itext-5.1.2.zip
+file.reference.itext-xtra-5.1.2-javadoc.jar=C:\\Users\\Darthian\\Downloads\\itext-xtra-5.1.2-javadoc.jar
+file.reference.itext-xtra-5.1.2-sources.jar=C:\\Users\\Darthian\\Downloads\\itext-xtra-5.1.2-sources.jar
+file.reference.itext-xtra-5.1.2.jar=C:\\Users\\Darthian\\Downloads\\itext-xtra-5.1.2.jar
+file.reference.itextpdf-5.1.2-javadoc.jar=C:\\Users\\Darthian\\Downloads\\itextpdf-5.1.2-javadoc.jar
+file.reference.itextpdf-5.1.2-sources.jar=C:\\Users\\Darthian\\Downloads\\itextpdf-5.1.2-sources.jar
+file.reference.itextpdf-5.1.2.jar=C:\\Users\\Darthian\\Downloads\\itextpdf-5.1.2.jar
 file.reference.substance-5.0.jar=substance-5.0.jar
 includes=**
 jar.compress=false
@@ -27,7 +32,12 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.substance-5.0.jar}:\
-    ${file.reference.itext-5.1.2.zip}
+    ${file.reference.itextpdf-5.1.2.jar}:\
+    ${file.reference.itextpdf-5.1.2-sources.jar}:\
+    ${file.reference.itextpdf-5.1.2-javadoc.jar}:\
+    ${file.reference.itext-xtra-5.1.2.jar}:\
+    ${file.reference.itext-xtra-5.1.2-sources.jar}:\
+    ${file.reference.itext-xtra-5.1.2-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
