itextpdf agregado al path.

--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.iText-5.0.6.jar=C:\\Program Files (x86)\\Java\\jre6\\lib\\ext\\iText-5.0.6.jar
+file.reference.itextpdf-5.1.2.jar=itextpdf-5.1.2.jar
 file.reference.substance-5.0.jar=substance-5.0.jar
 includes=**
 jar.compress=false
@@ -29,7 +30,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.substance-5.0.jar}:\
-    ${file.reference.iText-5.0.6.jar}
+    ${file.reference.iText-5.0.6.jar}:\
+    ${file.reference.itextpdf-5.1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
