--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -29,7 +29,10 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.substance-5.0.jar}:\
-    ${file.reference.itextpdf-5.1.2.jar}
+    ${file.reference.itextpdf-5.1.2.jar}:\
+    ${libs.ejb3-persistence.classpath}:\
+    ${libs.hibernate-persistence.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
