--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -31,8 +31,8 @@ javac.classpath=\
     ${file.reference.substance-5.0.jar}:\
     ${file.reference.itextpdf-5.1.2.jar}:\
     ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-persistence.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.EclipseLink-GlassFish-v3-Prelude.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -41,7 +41,8 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.EclipseLink-GlassFish-v3-Prelude.classpath}
 javadoc.additionalparam=
 javadoc.author=true
 javadoc.encoding=${source.encoding}
