--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -21,7 +21,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derby.jar=C:\\Users\\Darthian\\Documents\\derby.jar
+file.reference.eclipselink.jar=C:\\Users\\Darthian\\Documents\\eclipselink.jar
 file.reference.itextpdf-5.1.2.jar=itextpdf-5.1.2.jar
+file.reference.javax.persistence_2.0.3.v201010191057.jar=C:\\Users\\Darthian\\Documents\\javax.persistence_2.0.3.v201010191057.jar
 file.reference.substance-5.0.jar=substance-5.0.jar
 includes=**
 jar.compress=false
@@ -30,8 +33,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.substance-5.0.jar}:\
     ${file.reference.itextpdf-5.1.2.jar}:\
-    ${libs.ejb3-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.persistence_2.0.3.v201010191057.jar}:\
+    ${file.reference.derby.jar}:\
     ${libs.EclipseLink-GlassFish-v3-Prelude.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
