--- a/EvaluacionProveedores/nbproject/project.properties
+++ b/EvaluacionProveedores/nbproject/project.properties
@@ -21,10 +21,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/EvaluacionProveedores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.derby.jar=C:\\Users\\Darthian\\Documents\\derby.jar
-file.reference.eclipselink.jar=C:\\Users\\Darthian\\Documents\\eclipselink.jar
+file.reference.derby.jar=derby.jar
+file.reference.eclipselink.jar=eclipselink.jar
 file.reference.itextpdf-5.1.2.jar=itextpdf-5.1.2.jar
-file.reference.javax.persistence_2.0.3.v201010191057.jar=C:\\Users\\Darthian\\Documents\\javax.persistence_2.0.3.v201010191057.jar
+file.reference.javax.persistence_2.0.3.v201010191057.jar=javax.persistence_2.0.3.v201010191057.jar
 file.reference.substance-5.0.jar=substance-5.0.jar
 includes=**
 jar.compress=false
@@ -35,9 +35,8 @@ javac.classpath=\
     ${file.reference.itextpdf-5.1.2.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.eclipselink.jar}:\
-    ${file.reference.javax.persistence_2.0.3.v201010191057.jar}:\
     ${file.reference.derby.jar}:\
-    ${libs.EclipseLink-GlassFish-v3-Prelude.classpath}
+    ${file.reference.javax.persistence_2.0.3.v201010191057.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
